workloads/voyage/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyage
  namespace: voyage
  labels:
    app: voyage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voyage
  template:
    metadata:
      labels:
        app: voyage
    spec:
      # On utilise le secret généré par Infisical pour pull l'image
      imagePullSecrets:
        - name: ghcr-login-secret
      
      containers:
        # Conteneur 1: Ton application (PWA)
        - name: voyage-app
          image: ghcr.io/rjullien/voyage-app:sha-41838d2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-web

        # Conteneur 2: Oauth2-Proxy (Sidecar)
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          ports:
            - containerPort: 4180
              name: http-proxy
          args:
            - --provider=github
            - --github-user=rjullien,NicoleJ06,BaptTF,laurine-rol,apej06,jlncamille,dinahdfrsn
            - --email-domain=*
            - --upstream=http://127.0.0.1:80/ # Tape sur le Nginx local au pod
            - --http-address=0.0.0.0:4180
            - --redirect-url=https://voyage.bapttf.com/oauth2/callback
